kubernetes-istio/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type: NodePort
  selector:
    app: go-app # pods의 label 이름
  ports:
    - name: go-app-port1
      protocol: TCP
      port: 8080 # 서비스의 포트
      targetPort: 8080 # pod의 포트

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx # pods의 label 이름
  ports:
    - name: nginx-port
      protocol: TCP
      port: 80 # 서비스의 포트
      targetPort: 80 # pod의 포트
