kubernetes-istio/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gateway
spec:
  selector:
    istio: ingressgateway  # istio-ingressgateway의 label과 일치
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
