kubernetes-istio/base/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: go-app-vs
spec:
  hosts:
    - "*"  # Gateway에서 허용한 host
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /go/
      rewrite:
        uri: /
      route:
        - destination:
            host: go-app-service
            port:
              number: 8080
    - match:
        - uri:
            prefix: /nginx/
      rewrite:
        uri: /
      route:
        - destination:
            host: nginx-service
            port:
              number: 80
